# karel

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  configure  configure.ac  configure.in  doc.orig  help.h  karel.1  karel.y  kparse.h  main.c  makefile  maze.scr  scr.c
curses/: Makefile  Makefile.am  Makefile.in  cgui.c
doc/: Makefile.am  Makefile.in  karel.texi
gtk/: Makefile  Makefile.am  Makefile.in  karel.c
libkarel/: Makefile  Makefile.am  Makefile.in  code.c  engine.c  error.c  error.h  fatal.c  karel.h  karelP.h  klex.c  kparse.y  memory.c  nomem.c  parseerr.c  robot.c  robot.h  symbol.c  symbol.h  util.c  util.h  words.h  world.c  world.h  yyerror.c
samples/: hurdle6.wld  maze.k  maze1.wld  room1.wld  simple.k
test/: Makefile  Makefile.am  Makefile.in  testmain.c
website/: Makefile  index.html
