# I don't want the y.tab.c and y.tab.h files included in the distribution...

bin_PROGRAMS = karel
karel_SOURCES = code.c klex.c main.c scr.c symbol.c help.h karel.h words.h kparse.y kparse.h

#BUILT_SOURCES = y.tab.c y.tab.h

#YFLAGS = -d

#y.tab.c y.tab.h: karel.y
#	$(YACC.y) karel.y


#DISTCLEANFILES = y.tab.h

#EXTRA_DIST = karel.y karel.1
